--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   Height: <input id="height" type="number" value="53" onchange="generateAndDrawMaze()" />
 </label>
 
-<button onclick="drawMaze()">Draw</button>
+<button onclick="generateAndDrawMaze()">Draw</button>
 <button onclick="drawMazeSolution()">Draw Solution</button>
 
 <canvas width="800" height="600"></canvas>
