--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<html>
+<!doctype html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="index.css">
+      <meta charset="utf-8">
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <title>Maze</title>
+      <link rel="stylesheet" href="index.css">
     </head>
     <body>
 
